fixed grid system to stack on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ body {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  width: 100%;
 }
 .row.centered {
   -webkit-box-pack: center;
@@ -252,7 +253,7 @@ body {
 /* SITE STRUCTURE */
 /* SITE HEADER */
 .site-header {
-  background: #c7973e;
+  background-color: #c7973e;
   padding: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
