--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -2,7 +2,7 @@
 
 /* SITE HEADER */ 
 .site-header {
-    background: $color-accent-gold;
+    background-color: $color-accent-gold;
     padding: 1em;
     display: flex;
     justify-content: space-between;
